add folders for style and images

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Playground - JavaScript 101</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/application.css">
   </head>
   <body>
-    <p style="margin-top: 40vh; text-align: center; font: normal 24px monospace;">
-      Open the console 🤓
-    </p>
-
-    <!-- Add some HTML in here -->
-
+    <div class="container">
+      <!-- Add some HTML in here -->
+      <h1>Digital news photographer</h1>
+      <img src="images/id_john.jpg" alt="">
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
