add lorem ipsum

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
       <!-- Add some HTML in here -->
       <h1>Digital news photographer</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta consequatur culpa, itaque iure necessitatibus laboriosam omnis nemo modi vero atque unde tenetur ea perspiciatis distinctio nobis impedit asperiores sit possimus.</p>
       <img src="images/id_john.jpg" alt="">
     </div>
     <script src="main.js"></script>
